handoff: what broke, what was fixed, and what the suite still cannot see (#14)
Written to be read cold after a clear, so it carries the findings rather than
the story of finding them.

The benchmark was broken three separate ways and none of them were the hardware:
sampling ran per log line, results were only written at the end, and the idle
timer killed a healthy sweep. A fourth was worse because it was silent, the
shard matrix never passed --shard, so three boxes worked through the same
profiles in lockstep for hours with nothing failing and nothing warning.

The traps worth keeping: A2 is not A1 and provisioning did not check, new boxes
came up unreachable because cloud-init never ran tailscale up, and Async
deadlocks entity ticking on two cores the moment a player joins. That last one
is a hardware finding rather than a mod bug, and unlike the benchmark numbers it
came from a real failure.

Removed the phase-1 section, which predated the harness working and now
contradicted the rest. Updated the state table, which still claimed 17 pack
entries and one stopped bench box.

Also states plainly what the suite still cannot answer: TPS and MSPT are wired
end to end and read 20 on every profile, because worldgen barely ticks entities.
Simulated players are the missing piece, and they are what would have caught
Async before production did.


Claude-Session: https://claude.ai/code/session_011e7cdScAjy2DsSpVrKNXQc

Co-authored-by: Claude Opus 5 <noreply@anthropic.com>